# TripOptimizer

./: .gitattributes  .gitignore  README.md  render.yaml  vercel.json
.github/workflows/: ci.yml  keepalive.yml
backend/: .env.example  .gitignore  pyproject.toml
backend/data/: airports_sample.csv  fares_snapshot.parquet
backend/tests/api/: conftest.py  test_airports.py  test_cors.py  test_dependencies.py  test_health.py  test_optimize.py  test_schemas.py
backend/tests/fares/: test_cached.py  test_chain.py  test_month_matrix.py  test_on_demand.py  test_postgres_cache.py  test_synthetic.py  test_travelpayouts.py
backend/tests/graph/: test_airports.py  test_distance.py
backend/tests/ingestion/: test_build_snapshot.py  test_snapshot.py
backend/tests/optimizer/: test_bruteforce.py  test_heldkarp.py  test_infeasible.py  test_models.py  test_prefetch.py  test_runner.py  test_schedule.py
backend/tripoptimizer/: __init__.py
backend/tripoptimizer/api/: __init__.py  app.py  dependencies.py  routes.py  schemas.py
backend/tripoptimizer/core/fares/: base.py  cached.py  chain.py  models.py  month_matrix.py  on_demand.py  postgres_cache.py  synthetic.py  travelpayouts.py
backend/tripoptimizer/core/graph/: airports.py  distance.py
backend/tripoptimizer/core/optimizer/: bruteforce.py  heldkarp.py  models.py  prefetch.py  runner.py  schedule.py
backend/tripoptimizer/ingestion/: __init__.py  build_snapshot.py  snapshot.py
docs/: internal-guide.html
docs/superpowers/plans/: 2026-06-15-tripoptimizer-backend-foundation.md  2026-06-16-tripoptimizer-data-layer.md  2026-06-16-tripoptimizer-fastapi.md  2026-06-18-tripoptimizer-frontend.md
docs/superpowers/specs/: 2026-06-15-tripoptimizer-mvp-design.md  2026-06-18-tripoptimizer-frontend-design.md  2026-07-01-real-or-nothing-fares-design.md
frontend/: .env.example  .gitignore  README.md  components.json  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.setup.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx  world-atlas.d.ts
frontend/src/components/results/: Alternatives.test.tsx  Alternatives.tsx  CostSummary.test.tsx  CostSummary.tsx  IncompleteNotice.test.tsx  IncompleteNotice.tsx  ItineraryTimeline.test.tsx  ItineraryTimeline.tsx  Results.test.tsx  Results.tsx  RouteMap.test.tsx  RouteMap.tsx
frontend/src/components/trip-form/: AirportCombobox.test.tsx  AirportCombobox.tsx  CityList.test.tsx  CityList.tsx  DateFlexControls.test.tsx  DateFlexControls.tsx  TripForm.test.tsx  TripForm.tsx
frontend/src/components/ui/: button.tsx  command.tsx  input.tsx  popover.tsx
frontend/src/hooks/: hooks.test.tsx  useAirports.ts  useOptimize.ts
frontend/src/lib/: api.test.ts  api.ts  format.test.ts  format.ts  schemas.test.ts  schemas.ts  urlState.test.ts  urlState.ts
frontend/src/styles/: global.css  tokens.css
frontend/src/test/: msw-handlers.ts  render.tsx
frontend/tests/e2e/: optimize.spec.ts
