[project]
name = "tripoptimizer"
version = "0.1.0"
description = "Cheapest multi-city trip-ordering optimizer"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.5", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tripoptimizer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# --cov flags need the dev extras (pytest-cov); always run inside the uv venv
addopts = "-q --cov=tripoptimizer --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"
